--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,16 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+libraries:
+ - name: webapp2
+   version: latest
+ - name: jinja2
+   version: latest
+
 handlers:
+ - url: /admin/.*
+   script: usnationals.app
+   secure: always
  - url: /.*
    script: usnationals.app
    secure: always
