--- a/app.yaml
+++ b/app.yaml
@@ -12,6 +12,7 @@ handlers:
  - url: /admin/.*
    script: usnationals.app
    secure: always
+   login: admin
  - url: /.*
    script: usnationals.app
    secure: always
