Ignore generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ USNationalsApp/local.properties
 USNationalsApp/.idea/workspace.xml
 USNationalsApp/.idea/libraries
 USNationalsApp/.DS_Store
+USNationalsApp/build
 USNationalsApp/app/build
