--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,13 @@
 runtime: python27
 api_version: 1
 threadsafe: true
+skip_files:
+ - ^(.*/)?#.*#$
+ - ^(.*/)?.*~$
+ - ^(.*/)?.*\.py[co]$
+ - ^(.*/)?.*/RCS/.*$
+ - ^(.*/)?\..*$
+ - USNationalsApp
 
 libraries:
  - name: webapp2
