Add firebase messaging.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ USNationalsApp/.idea/libraries
 USNationalsApp/.DS_Store
 USNationalsApp/build
 USNationalsApp/app/build
+USNationalsApp/app/google-services.json
