--- a/USNationalsApp/app/build.gradle
+++ b/USNationalsApp/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.google.firebase:firebase-messaging:9.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
