--- a/USNationalsApp/app/src/main/AndroidManifest.xml
+++ b/USNationalsApp/app/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".AdminActivity"
+            android:label="@string/title_activity_admin"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
