--- a/USNationalsApp/app/src/main/AndroidManifest.xml
+++ b/USNationalsApp/app/src/main/AndroidManifest.xml
@@ -45,8 +45,8 @@
             android:label="@string/title_activity_stage_schedule"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".HeatInfoActivity"
-            android:label="@string/title_activity_heat_info"
+            android:name=".GroupInfoActivity"
+            android:label="@string/title_activity_group_info"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
