--- a/USNationalsApp/app/build.gradle
+++ b/USNationalsApp/app/build.gradle
@@ -9,14 +9,13 @@ android {
             storePassword 'socorro2017'
         }
     }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 28
     defaultConfig {
         applicationId "org.cubingusa.usnationals"
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 10
-        versionName "2.018.1"
+        minSdkVersion 16
+        targetSdkVersion 28
+        versionCode 11
+        versionName "2.019.1"
     }
     buildTypes {
         release {
@@ -28,12 +27,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.google.firebase:firebase-messaging:9.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    api 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    api 'com.android.support:design:28.0.0'
+    api 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    api 'com.google.firebase:firebase-messaging:19.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
